<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flash_screen_page"
    android:layout_width="392dp"
    android:layout_height="871dp"
    android:clipToOutline="true"
    android:background="@drawable/flash_screen_page_backgroud"
    tools:context=".MainActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/logo_cotent"
        android:layout_width="70dp"
        android:layout_height="119dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="210dp">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/logo_pic" />

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/logo_text"
            android:layout_width="58dp"
            android:layout_height="41dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/logo" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/ih_weibo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ih_weibo"
                    android:textAppearance="@style/ih_weibo"
                    android:gravity="center_horizontal"
                    />

                <TextView
                    android:id="@+id/some_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logo_text"
                    android:textAppearance="@style/loge_text"
                    android:gravity="center_horizontal"
                    />

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/privacy"
        android:layout_width="268dp"
        android:layout_height="252dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:clipToOutline="true"
        android:background="@drawable/privacy_backgroud">
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/privacy_title"
            android:layout_width="268dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/privacy_title_text"
                android:layout_width="90dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:text="@string/privacy_title"
                android:textAppearance="@style/privacy_title"
                android:gravity="top"
                />
        </RelativeLayout>
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/privacy_content"
            android:layout_width="268dp"
            android:layout_height="80dp"
            android:layout_below="@+id/privacy_title">
            <TextView
                android:id="@+id/privacy_content_text_"
                android:layout_width="236dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:text="@string/privacy_content"
                android:textAppearance="@style/privacy_content"
                android:gravity="top"
                />
        </RelativeLayout>
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/privacy_disagree"
            android:layout_width="268dp"
            android:layout_height="30dp"
            android:layout_below="@+id/privacy_content">
            <TextView
                android:id="@+id/privacy_disagree_text"
                android:layout_width="60dp"
                android:layout_height="19dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/privacy_disagree"
                android:textAppearance="@style/privacy_disagree"
                android:gravity="top"
                />
        </RelativeLayout>
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/privacy_agree"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0D84FF"
            android:layout_below="@+id/privacy_disagree">
            <TextView
                android:id="@+id/privacy_agree_text"
                android:layout_width="80dp"
                android:layout_height="21dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/privacy_agree"
                android:textAppearance="@style/privacy_agree"
                android:gravity="top"
                />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>