<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">
        <View
            android:layout_width="64dp"
            android:layout_height="21dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="left|center"/>

        <TextView
            style="@style/fragment_title"
            android:layout_width="60dp"
            android:layout_height="27dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my_title" />

        <TextView
            android:id="@+id/layout"
            android:layout_width="64dp"
            android:layout_height="21dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="20dp"
            android:text="@string/logout"
            style="@style/logout"
            android:visibility="invisible"/>


    </LinearLayout>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_my"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MyFragment">

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/user_status"
                android:layout_width="368dp"
                android:layout_height="171dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:background="@drawable/user_status_background">

                <ImageView
                    android:id="@+id/profile_photo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="16dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/profile_photo_background" />

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/profile_text"
                    android:layout_width="120dp"
                    android:layout_height="47dp"
                    android:layout_below="@id/profile_photo"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="27dp"
                        android:gravity="center_horizontal"
                        android:layout_centerHorizontal="true"
                        android:text="@string/user_name"
                        android:textAppearance="@style/user_name" />

                    <TextView
                        android:id="@+id/fans_count"
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:layout_below="@id/user_name"
                        android:gravity="center_horizontal"
                        android:layout_centerHorizontal="true"
                        android:text="@string/fans_count"
                        android:textAppearance="@style/fans_count" />
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/user_status"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/user_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="登录后查看"/>
            </LinearLayout>

        </RelativeLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_gravity="bottom"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/recommend_icon"
                android:contentDescription="Recommend Icon" />
            <TextView
                android:id="@+id/tv_recommend"
                android:layout_width="182dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="推荐"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/my_icon"
                android:contentDescription="My Icon" />
            <TextView
                android:id="@+id/tv_my"
                android:layout_width="182dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="我的"/>



        </LinearLayout>

    </LinearLayout>

</LinearLayout>
